--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=REM:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>MERN-Blog</title>
+    <title>NoirRose</title>
   </head>
   <body>
     <div id="root"></div>
